fix: Memory Leak issue