@@ -3,20 +3,24 @@ set -e
 
 # Default JVM options if JAVA_OPTS is not set externally
 : "${JAVA_OPTS:=-XX:+UseContainerSupport \
-  -XX:MaxRAMPercentage=50.0 \
-  -XX:InitialRAMPercentage=25.0 \
+  -XX:MaxRAMPercentage=75.0 \
+  -XX:InitialRAMPercentage=30.0 \
   -XX:+UseG1GC \
-  -XX:MaxGCPauseMillis=50 \
+  -XX:MaxGCPauseMillis=200 \
   -XX:+UseStringDeduplication \
   -XX:+ParallelRefProcEnabled \
   -XX:MaxDirectMemorySize=32m \
   -XX:ReservedCodeCacheSize=40m \
   -XX:+OptimizeStringConcat \
   -Xss228k \
-  -XX:MaxMetaspaceSize=100m \
+  -XX:MaxMetaspaceSize=120m \
   -XX:+ExitOnOutOfMemoryError \
+  -XX:+HeapDumpOnOutOfMemoryError \
+  -XX:HeapDumpPath=/tmp/heapdump.hprof \
   -XX:G1PeriodicGCInterval=120000 \
   -XX:G1PeriodicGCSystemLoadThreshold=0.0 \
+  -XX:NativeMemoryTracking=summary \
+  -Xlog:gc*:file=/tmp/gc.log:time,level,tags:filecount=3,filesize=5m \
   -Djava.security.egd=file:/dev/./urandom}"
 
 SPRING_PROFILE="${SPRING_PROFILES_ACTIVE:-prod}"
